<resources>
    <string name="app_name">CarPooling</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ride">Find Ride</string>
    <string name="menu_lead">Lead Ride</string>
    <string name="menu_my_board">My Board</string>
    <string name="menu_locations">My Locations</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About Us</string>
    <string name="email"><u>carpooling2192@gmail.com</u></string>
    <string name="search">Search</string>
    <string name="search_place">Search places</string>
    <string name="number_of_seat_available">Number of seats available</string>
    <string name="gender_prefrence">Gender Prefrence</string>
    <string-array name="gender_arrays">
        <item>Any</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="nearby_search">
        <item>SELECT RANGE</item>
        <item>1km</item>
        <item>3km</item>
        <item>5km</item>
        <item>10km</item>
    </string-array>

    <string name="google_maps_API_key">AIzaSyDqQAiO92afZxJ2PsZfGXLfLQsGM51Sd2c</string>

    <string name="mapbox_key">pk.eyJ1IjoibW83bW1lZC05OCIsImEiOiJjazd2dngxMHkwNmhxM2VubmN3NDRsaTkzIn0.zG-Fttr4ZhDZlsSu1zo4Vg</string>

</resources>
